--- a/lec14/slide-14-02.tex
+++ b/lec14/slide-14-02.tex
@@ -64,7 +64,7 @@
     
     "Is Parallel Programming Hard, And, If So, What Can You Do About It?",Paul McKenney;\\
     "C++Concurrency in Action", ANTHONY WILLIAMS; \\
-    "CS510 - Advanced Topics in Concurrency", Jonathan Walpole;很 
+    "CS510 - Advanced Topics in Concurrency", Jonathan Walpole;
     Adam Belay from MIT PDOS
 \end{frame}
 
