--- a/lec1/slide-01-01.tex
+++ b/lec1/slide-01-01.tex
@@ -45,7 +45,7 @@
 
  	\begin{itemize}
  		\item TA: ...
-		\item Course Representatives:王润基、贾越凯、戴臻旸、王逸松...
+		\item Course Representatives:...
 	\end{itemize}
 
 
@@ -128,6 +128,8 @@
 	\Large 
 	\textbf{Reference Books}
 	\begin{itemize}\large 
+        \item 陈海波，夏虞斌 等著, \textbf{现代操作系统：原理与实现}
+        \item Remzi H. Arpaci-Dusseau, \textbf{Operating Systems: Three Easy Pieces}
 		\item Wolfgang Mauerer, \textbf{Professional Linux Kernel Architecture}
 		\item Uresh Vahalia, \textbf{UNIX Internals-- The New Frontiers}
 		\item Daniel P. Bovet, \textbf{Understanding the Linux Kernel}
