--- a/lec1/slide-01-02.tex
+++ b/lec1/slide-01-02.tex
@@ -43,7 +43,7 @@ Scheduling
 \begin{itemize}
 	
 	\item Monday (8:00-9:35)　
-	\item 4-101, 4th building
+	\item B105, Law Library
 
 \end{itemize}
 \begin{table}[]
@@ -53,10 +53,10 @@ Scheduling
 		2 & Lec 2 OS Architecture                             \\ \hline
 		3 & Lec3+4  System Virtualization Overview            \\ \hline
 		4 & Lec5+6  OS/System API/Interface                   \\ \hline
-		5 & Lec7+8 OS for MultiCore Architecture              \\ \hline
-		6 & Lec 9+10 OS/System Security                       \\ \hline
-		7 & Lec 11+12 Correctness: OS/System Verification     \\ \hline
-		8 & Lec 13+14 OS Kernel and HLL                       \\ \hline
+		5 & Lec7+8 OS Kernel and HLL                          \\ \hline
+		6 & Lec 9+10 OS for MultiCore Architecture            \\ \hline
+		7 & Lec 11+12 OS/System Security                      \\ \hline
+		8 & Lec 13+14  Correctness: OS/System Verification    \\ \hline
 		9 & Lec 15+16 Invited Talks From Visitors \& Students \\ \hline
 	\end{tabular}
 \end{table}
