--- a/lec6/slide-06-02.tex
+++ b/lec6/slide-06-02.tex
@@ -206,9 +206,7 @@ A Study of the Unix Operating System 1973–2015}
 			
 			\LARGE
 			\begin{block}{objective}
-			The objective of this work is to study the long term evo-
-			lution of C programming in the context of the Unix oper-
-			ating system development. 
+			The objective of this work is to study the long term evolution of C programming in the context of the Unix operating system development. 
 			\end{block}
 		
 			Formulate seven hypotheses associated with the long term evolution of C programming in		the Unix operating system
