update lec1/slide-01-02, update outline

--- a/lec1/slide-01-02.tex
+++ b/lec1/slide-01-02.tex
@@ -43,7 +43,7 @@ Scheduling
 \begin{itemize}
 	
 	\item Monday (8:00-9:35)　
-	\item B105, Law Library
+	\item 4-203, Fourth Building
 
 \end{itemize}
 \begin{table}[]
